# mao-wise

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  dvc.config  pyproject.toml  requirements.txt  test_feedback_example.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  kb-smoke.yml  llm-guard.yml  release-please.yml
apps/api/: main.py  middleware.py
apps/ui/: app.py
datasets/: test_experiments.parquet
datasets/constraints/: lab_constraints.yaml
datasets/experiments/: experiments.parquet
docs/: Canvas_Batch_Script_Configuration.md
lab_package_R1/: exp_tasks.csv  exp_tasks_with_ids.csv
lab_package_R2/: exp_tasks.csv
lab_package_R2/plans_yaml/: batch_20250814_0148_plan_002.yaml  batch_20250814_0244_variant_002.yaml
lab_package_R3/: exp_tasks.csv
lab_package_R3/plans_yaml/: batch_20250814_0341_plan_007.yaml
lab_package_convergence_test/: exp_tasks.csv
lab_package_convergence_test/plans_yaml/: batch_20250814_0241_plan_004.yaml
manifests/: experiment_result_template.csv  library_manifest.csv  manifest_test.csv  manifest_train.csv  manifest_val.csv
maowise/: __init__.py
maowise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
maowise/api_schemas/: __init__.py  schemas.py
maowise/config/: __init__.py  config.yaml  config.yaml.backup  presets.yaml  schema.json
maowise/dataflow/: extract_pdf.py  ingest.py  llm_assist.py  ner_rules.py  normalize.py
maowise/experts/: __init__.py  clarify.py  explain.py  followups.py  plan_writer.py  question_catalog.yaml  schemas_llm.py  slotfill.py
maowise/kb/: build_index.py  search.py
maowise/llm/: __init__.py  client.py  jsonio.py  rag.py
maowise/models/: dataset_builder.py  ensemble.py  features.py  infer_fwd.py  train_fwd.py  train_tabular.py
maowise/optimize/: engines.py  objectives.py  postprocess.py  space.py
maowise/utils/: __init__.py  config.py  ingest_utils.py  logger.py  sanitizer.py  schema.py
outputs/lab_package_R4/: exp_tasks.csv
outputs/lab_package_R4_final/: exp_tasks.csv
outputs/lab_package_R5_now/: exp_tasks.csv  exp_tasks.xlsx
outputs/lab_package_R5_now_shortlist/: exp_tasks.csv  exp_tasks.xlsx  lab_runsheet_R5_now_shortlist.xlsx
results/: trial_results.xlsx
scripts/: analyze_group_split.py  append_feedback_to_kb.py  bootstrap_env.ps1  build_kb.py  build_kb.sh  calibrate_mass_proxy.py  check_leakage.py  compute_round1_summary.py  demo_clarify_slotfill.py  demo_ensemble.py  demo_explain_plan.py  demo_mandatory_qa.py  demo_real_run.py  diagnose_llm_connectivity.ps1  e2e_check.sh  e2e_data_prep.py  e2e_demo.ipynb  e2e_validate.py  emit_experiment_ids.py  evaluate_ensemble.py  evaluate_group_split.py  evaluate_predictions.py  generate_batch_plans.py  generate_gp_corrector_report.py  go_live_R4.ps1  ingest_lab_feedback.py  link_local_library.ps1  make_html_report.py  make_planbook.py  make_split.py  next_batch.ps1  pipeline_local.ps1  pipeline_real.ps1  preflight_go_live.ps1  preflight_go_live.py  push_to_github.ps1  quick_e2e_test.py  real_run.ps1  record_experiment_results.py  register_library.py  (+35 more)
tasks/R4_combined/: plans.csv
tasks/R4_final/: plans.csv
tasks/batch_20250812_2246/: README.md  plans.csv  validation_report.xlsx
tasks/batch_20250813_1538/: README.md  plans.csv  validation_report.xlsx
tasks/batch_20250813_1634/: README.md  plans.csv
tasks/batch_20250813_2112/: README.md  plans.csv  validation_report.xlsx
tasks/batch_20250813_2113/: README.md  plans.csv  validation_report.xlsx
tasks/batch_20250814_0135/: README.md  plans.csv  validation_report.xlsx
tasks/batch_20250814_0148/: README.md  plans.csv
tasks/batch_20250814_0241/: README.md  plans.csv
tasks/batch_20250814_0244/: README.md  plans.csv
tasks/batch_20250814_0341/: README.md  plans.csv
tasks/batch_20250814_0345/: README.md  plans.csv
tests/: test_api_smoke.py  test_ensemble.py  test_eval_and_update.py  test_experts.py  test_explain_plan.py  test_fwd_model.py  test_generate_batch_plans.py  test_kb.py  test_llm.py  test_mandatory_qa.py  test_no_keys_committed.py  test_optimize.py  test_pack_writes_all.py  test_schema.py  test_scoring.py  test_split.py  test_validate_recommendations.py
(+116 files in other folders)
